# data-insight-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CUSTOMIZATION.md  GUIDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: hooks.json
.codex-plugin/: plugin.json
agents/: analyze.md  communicate.md  connect.md  explore.md  frame.md  intake.md  qa.md  visualize.md
connectors/: .env.example  source.py
dashboard_v5/: __init__.py  browser_qa.py  compiler.py  contract.py  echarts_options.py  quality.py  visual_review.py
docs/: analysis-strategy-library.md  dashboard-design-system.md  external-adapter-registry.md  external-denominator-adapters.md  handoff-codex-20260714.md  model-tier-map.md  pipeline-contract.md  report-quality-rubric.md  source-adapters.md  user-facing-planning.md  v5-v51-smoke-comparison.md
domains/: README.md
hooks/: hooks.json
methods/: method_registry.json
qa/: validate.py
schemas/: chart_spec.schema.json  checkpoint_question.schema.json  dashboard_data.schema.json  dashboard_layout.schema.json  dependency_plan.schema.json  domain_intake.schema.json  exploration_candidates.schema.json  external_adapter_plan.schema.json  external_denominator_manifest.schema.json  intake_questions.schema.json  method_route.schema.json  report_config.schema.json  run_context.schema.json  source_api_manifest.schema.json
scripts/: apply_checkpoint_answer.py  apply_intake_answer.py  build_domain_intake.py  checkpoint_gate.py  dependency_preflight.py  dik_checkpoint_hook.py  (+11 more)
(+53 files in other folders)
